[tool.poetry]
name = "repl_nix_sasas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yarl = "^1.7.2"
aiohttp = "^3.8.1"
orjson = "^3.6.8"
requests = "^2.27.1"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
